<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>

  </data>
  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    android:focusableInTouchMode="true">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:overScrollMode="never"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      app:fab_addButtonColorNormal="@color/colorAccent"
      app:fab_addButtonColorPressed="@color/colorAccentDark"
      app:layout_behavior=".utils.FloatingActionButtonBehavior"
      app:fab_addButtonPlusIconColor="@color/white"
      app:fab_labelStyle="@style/custom_fab_label">

      <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/white"
        app:fab_colorPressed="@color/very_light_gray"
        app:fab_icon="@drawable/ic_add_black_24dp"
        app:fab_size="mini"
        app:fab_title=""/>
      <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_action2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/white"
        app:fab_colorPressed="@color/very_light_gray"
        app:fab_icon="@drawable/ic_check_black_24dp"
        app:fab_size="mini"
        app:fab_title=""/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>