...
    android:layout_height="wrap_content"
    android:divider="?attr/dividerHorizontal"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
      android:id="@+id/edit_linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:focusable="true"
...
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/delete_linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:focusable="true"
...
