<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?attr/selectableItemBackground"
  android:orientation="horizontal">

  <ImageView
    android:id="@+id/drag_image_view"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:contentDescription="@string/drag_icon"
    app:srcCompat="@drawable/ic_drag_handle_black_24dp"/>

  <TextView
    android:id="@+id/text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:textSize="20sp"/>
</LinearLayout>